--- a/styles.css
+++ b/styles.css
@@ -36,33 +36,77 @@
   padding: 15px;
 }
 
-.modal {
-  display: flex;
-  width: 1120px;
-  height: 770px;
+@media (min-width: 768px) {
+  .modal {
+    display: flex;
+    width: 1120px;
+    height: 770px;
+  }
 }
 
-.contact-info {
-  /*flex-grow: 1;*/
-  /*padding: 30px 15px 0 15px;*/
-  background: rgba(0, 0, 0, 0.8);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
+@media (max-width: 768px) {
+  .modal {
+    display: flex;
+    width: 1120px;
+    flex-direction: column-reverse;    
+  }  
 }
 
-.contact-info-item {
-  display: flex;
-  margin-bottom: 45px;
-  width: 355px;
-  max-width: 100%;
+@media (min-width: 992px){
+  .contact-info {
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
 }
+
+@media (max-width: 768px) {
+  .contact-info {
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 40%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px){
+  .contact-info {
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    }
+}
+
+/*@media (min-width: 768px) {*/
+  .contact-info-item {
+    display: flex;
+    margin-bottom: 45px;
+    width: 355px;
+    max-width: 100%;
+  }
+/*}*/
+
+/*
+@media (max-width: 768px) {
+  .contact-info-item {
+    display: flex;
+    margin-bottom: 45px;
+    max-width: 100%;
+  }
+}
+*/
 
 .contact-info-item:last-child {
   margin-bottom: 0;
-}
+}  
 
 .contact-info-item__icon {
   margin-right: 25px;
@@ -86,15 +130,48 @@
   color: #00ad5f;
 }
 
-.contact-form {
-  /*flex-grow: 1;*/
-  /*height: 500px;*/
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  background: #fff;
-  padding-left: 30px;
-  padding-right: 30px;
+@media (min-width: 992px){
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    background: #fff;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+    background: #fff;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+    background: #fff;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px){
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    background: #fff;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 .contact-form-title {
@@ -116,11 +193,11 @@
   margin-bottom: 10px;
 }
 
-
-.contact-form-item__input+.contact-form-item__input {
-  margin-left: 25px;
-}
-
+/*@media (min-width: 992px) {*/
+  .contact-form-item__input+.contact-form-item__input {
+    margin-left: 25px;
+  }
+/*}*/
 
 .contact-form-item__user-message {
   margin-bottom: 23px;
@@ -150,6 +227,7 @@
   outline-offset: 15px;
   transition-property: outline-offset;
   transition-duration: .4s;
+  min-width: 2px;
 }
 
 .contact-form-item__button {
@@ -158,6 +236,7 @@
   background-color: #00ad5f;
   font-size: 12px;
   font-family: Montserrat;
+  color: #fff;
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 23px;
