--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 .page_body {
   background: url(./main-background.jpg);
   width: 100%;
+  height: 100%;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -60,7 +61,8 @@
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;    
+            flex-direction: column-reverse; 
+    height: 1283px;
   }  
 }
 
@@ -228,6 +230,8 @@
   color: #333;
   margin-top: 55px;
   margin-bottom: 60px;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .contact-form-item {
@@ -239,6 +243,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 1;        
 }
 
 .contact-form-item__title {
@@ -247,8 +253,16 @@
   margin-bottom: 10px;
 }
 
-.contact-form-item__input+.contact-form-item__input {
-  margin-left: 25px;
+@media (min-width: 575px) {
+  .contact-form-item__input+.contact-form-item__input {
+    margin-left: 25px;
+  }
+}
+
+@media (max-width: 576px) {
+  .contact-form-item__input+.contact-form-item__input {
+    margin-top: 10px;
+  }
 }
 
 .contact-form-item__user-message {
@@ -264,13 +278,24 @@
   -webkit-transition-duration: .4s;
        -o-transition-duration: .4s;
           transition-duration: .4s;
+  border: 1px solid #999;
 }
 
-.contact-form-item__full-name {
-  height: 55px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media (min-width: 576px) {
+  .contact-form-item__full-name {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (max-width: 575px) {
+  .contact-form-item__full-name {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .contact-form-item__input {
@@ -281,6 +306,8 @@
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  min-width: 2px;
+  border: 1px solid #999;
   outline: 0px solid;
   outline-offset: 15px;
   -webkit-transition-property: outline-offset;
@@ -289,7 +316,6 @@
   -webkit-transition-duration: .4s;
        -o-transition-duration: .4s;
           transition-duration: .4s;
-  min-width: 2px;
 }
 
 .contact-form-item__button {
